# discord-webhook-bot

./: Cargo.toml  README.md
docs/: devlog.md
src/: discord_commands.rs  discord_impl.rs  main.rs  structs_json.rs
